fixed some layout issues

--- a/src/components/contactform/contactform.css
+++ b/src/components/contactform/contactform.css
@@ -82,3 +82,8 @@
     margin-top: 1rem;
     color: var(--tertiary-red);
 }
+
+.error-email-span {
+    display: block;
+    color: var(--primary-black);
+}
