--- a/src/index.css
+++ b/src/index.css
@@ -276,11 +276,6 @@ section {
 }
 
 /* General  */
-@media screen and (min-width:1200px) and (max-width: 1400px) {
-  .testimonial-card {
-    min-height: 450px;
-  }
-}
 
 @media screen and (max-width:1350px) {
   .hello-section_title {
@@ -319,7 +314,7 @@ section {
   }
 
   .testimonial-card {
-    min-height: 250px;
+    min-height: 300px;
     height: 250px;
     width: 80%;
   }
@@ -414,7 +409,8 @@ section {
 
   .testimonial-card {
     width: 100%;
-    height: 100px;
+    height: 250px;
+    min-height: auto;
     text-align: center;
   }
 
@@ -507,6 +503,10 @@ section {
     gap: 1rem;
   }
 
+
+  .testimonial-card {
+    height: 300px;
+  }
 
   .about-section_image-wrapper {
     width: 100%;
